2013-11-03  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* calculus.tcl: Corrected calculation of corrector in heunStep

2013-03-05  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* statistics.tcl: [Ticket 05d055c2f5]: Added weights to histogram
	* statistics.man: [Ticket 05d055c2f5]: Documented weights to histogram
	* statistics.test: [Ticket 05d055c2f5]: Added test for weights to histogram
	* pkgIndex.tcl: [Ticket 05d055c2f5]: Bumped to version 0.8.1

2013-03-11  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* math.test (math-12.1): [Bug 3606620]: Disabled debug output
	command lifting SafeBase error information into the test log.

2013-03-05  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* decimal.tcl: Some rounding issues fixed (by Mark Alston)
	* pkgIndex.tcl: Bumped version of decimal package to 1.0.3

2013-02-08  Andreas Kupries  <andreask@activestate.com>

	* decimal.man: Fixed leading namespace qualifier in label.
	* symdiff.man: Fixed missing short package title.

2013-02-01  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.15 ========================
	*

2012-06-25  Arjen Markus <arjenmarkus@users.sourceforge.net>

	* statistics.tcl: Add procedures for Wilcoxon test and Spearman
	  rank correlation to the export list

2012-06-24  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* decimal.man:     Correct documentation (namespace) for decimal package
	* statistics.tcl:  Add Wilcoxon test and Spearman rank correlation
	  Bumped version to 0.8
	* statistics.test: Add test cases for Wilcoxon test and Spearman rank correlation
	* statistics.man:  Describe procs for Wilcoxon test and Spearman rank correlation
	* wilcoxon.tcl:    Added this file - contains implementation of the new procs

2011-12-13  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.14 ========================
	*

2011-11-09  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
